--- a/css/queries.css
+++ b/css/queries.css
@@ -16,9 +16,6 @@
 }
 
 @media (max-width: 430px) {
-  header {
-    position: relative;
-  }
   nav {
     padding: 1.7rem 2.4rem;
   }
